# TechScope

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
techscope/: __init__.py  dns_record.py  site.py  utils.py
techscope/data/: schema.json
techscope/data/technologies/: s.json  w.json
