[tool.poetry]
name = "techscope"
version = "0.1.0"
description = ""
authors = ["LeMoussel <cnhx27@gmail.com>"]
readme = "README.md"
license = "LICENSE.txt"
exclude = [
    "tests/*",
    "example.py",
    "info.md",
    ".vscode/*",
]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.47.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
